# flash-rover

./: Cargo.toml  README.md  check_flash.sh  flash_multiimage_oad.sh  flash_nbcn_quick.sh  write_nvs_mode.sh
.github/workflows/: release.yml
dss/src/: lib.rs
dss/src/com/ti/ccstudio/scripting/environment/: mod.rs
dss/src/com/ti/debug/engine/scripting/: mod.rs
scripts/: firmware.sh
scripts/cli-entry/: flash-rover  flash-rover.bat
src/: app.rs  args.rs  assets.rs  flash_rover.rs  main.rs  scan.rs  types.rs
src/assets/ccxml/: template_cc13x1_cc26x1.ccxml
src/fw/bsp/: power.hpp
src/fw/gcc/cc13x1-cc26x1/: develop.lds  firmware.lds  flash_rover_fw_cc13x1_cc26x1.projectspec  startup_gcc.c
