[package]
name = "flash-rover"
version = "0.3.3"
authors = ["Texas Instruments <ti.com>"]
license = "BSD-3-Clause"
edition = "2018"

[[bin]]
name = "ti-xflash"
path = "src/main.rs"

[workspace]
members = [
    "dss",
]

[dependencies]
byte-unit = "3.0"
clap = "2.33"
libc = "0.2"
path-clean = "0.1"
path-slash = "0.1"
rust-embed = "5.5"
tempfile = "3.1"

[dependencies.snafu]
version = "0.6"
default-features = false
features = ["backtraces"]

[dependencies.dss]
version = "0.2"
path = "dss"
